  SCIPsolveLinearEquationsIpopt() in the context of computing eigenvalues or solving linear equations. If IPOPT is available,
  the calls will be passed on.
- SCIPmultiplyBySumExprSum(), SCIPpowerExprSum()
- SCIPsetParam()
- SCIPgetPrimalDualIntegral() returns the primal dual integral stored in the statistics

### Command line interface

- Added optional parameter -i when calling SCIP in AMPL-mode (-AMPL parameter).
  If -i is specified, a SCIP shell is started where normally SCIPsolve() would be called.

### Interfaces to external software

- Added interface to Lapack (used for solving nonlinear problems).
- The AMPL interface now supports parameters specified in AMPL command scripts via option scip_options.
  The value of scip_options is expected to be a sequence of parameter names and values, separated by a space, e.g.,
    `option scip_options 'limits/time 10 display/verblevel 1';`.
  String values should not be quoted and spaces in string values are not supported.

### Changed parameters

- Shrunk range of parameter "propagating/symmetry/sstleaderrule" from [0,3] to [0,2], removed "MAXCONFLICTS"-option.

### New parameters

- expr/pow/expandmaxexponent to specify limit on exponent when to expand power of sum
- expr/pow/distribfracexponent to enable expanding power of products with fractional exponents
- expr/product/expandalways to enable expanding any product with sums as factor (that is, also when more than two factors)

### Data structures

Deleted files
-------------

- deleted the now unused files: tpi_none.h, tpi_openmp.h, tpi_tnycthrd.h, type_tpi_none.h, type_tpi_openmp.h, type_tpi_tnycthrd.h

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

- New flag -DLAPACK=on for linking with Lapack (must be available in the system)

### Makefile

- New flag LAPACK for linking with Lapack (must be available in the system)

Fixed bugs
----------

Miscellaneous
-------------
