@@ -193,9 +193,9 @@ SCIP_RETCODE SCIPnlrowChgRhs(
 
 /** sets the curvature of a nonlinear row */
 void SCIPnlrowSetCurvature(
-   SCIP_NLROW*           nlrow,              /**< NLP row */
+   SCIP_NLP*             nlp,                /**< NLP */
    SCIP_SET*             set,                /**< global SCIP settings */
-   SCIP_STAT*            stat,               /**< problem statistics data */
+   SCIP_NLROW*           nlrow,              /**< NLP row */
    SCIP_EXPRCURV         curvature           /**< curvature of NLP row */
    );
 
@@ -633,6 +633,15 @@ SCIP_NLROW** SCIPnlpGetNlRows(
 /** gets current number of nonlinear rows in NLP */
 int SCIPnlpGetNNlRows(
    SCIP_NLP*             nlp                 /**< current NLP data */
+   );
+
+/** gets statistics on convexity of nonlinear rows in NLP */
+void SCIPnlpGetNlRowsStat(
+   SCIP_NLP*             nlp,                /**< current NLP data */
+   int*                  nlinear,            /**< buffer to store number of linear rows in NLP, or NULL */
+   int*                  nconvexineq,        /**< buffer to store number of convex inequalities in NLP, or NULL */
+   int*                  nnonconvexineq,     /**< buffer to store number of nonconvex inequalities in NLP, or NULL */
+   int*                  nnonlineareq        /**< buffer to store number of nonlinear equalities or ranged rows in NLP, or NULL */
    );
 
 /** gets the NLP solver interface */
